syntax = "proto3";

option go_package = "api_gateway/grpc";


service WeatherForecastService {
  rpc GetForecast(ForecastInput) returns (ForecastOutput);
}

//input: pathname del luogo
//output: json con informazioni --> {time=[...], temperature=[...], humidity=[...], cloud_cover=[...], precipitation=[...], wind_speed=[...]}

message ForecastInput {
  string Path = 1;
}

message ForecastOutput {
  string Forecasts = 1;
}
